# ChangeLog for app-portage/trickyfetch
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*trickyfetch-7.3 (25 Nov 2012)

  01 Dev 2012; Martin Väth <martin@mvath.de>
  Remove USE=eix; only log recommendation if appropriate

  25 Nov 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Make getdelta support optional

*trickyfetch-7.2 (11 Nov 2012)

  11 Nov 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-7.1 (23 Aug 2012)

  28 Sep 2012; Martin Väth <martin@mvath.de>
  Bump to EAPI=5

  23 Aug 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-7.0 (16 Jun 2012)

  16 Jun 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Make NODELTA a masklist. Support
  DELTA_EXCLUDE. Do not call getdelta on later mirrors. Quicker with eix.

*trickyfetch-6.9 (09 Jun 2012)

  09 Jun 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-6.8 (07 May 2012)

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  07 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-6.7 (04 May 2012)

  04 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-6.6 (19 Apr 2012)

  19 Apr 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-6.5 (08 Apr 2012)

  15 Apr 2012; Martin Väth <martin@mvath.de>
  Inherit base

  08 Apr 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-6.4 (05 Apr 2012)

  05 Apr 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-6.3 (12 Mar 2012)

  19 Mar 2012; Martin Väth <martin@mvath.de>
  Use vcs-snapshot.eclass

  12 Mar 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-6.2 (28 Feb 2012)

  28 Feb 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.
