@@ -1,1 +1,1 @@
-DIST trickyfetch-7.3.tar.gz 10016 SHA256 6c59697993c874697ec184ac0063d2b93efb3f3706fa1f6226f0874b30f4dc0a SHA512 a73b6df2332e8890c6a20dde864ce93c39b871f5032ad093532e12d8d77069611f84df8c429df45a49d2fe7bb671d486775275f15c4efe2f1d637ff95c869cab WHIRLPOOL da611c51bee8b0c94f2b3c1d7202fa9e9c755334c85ecffa460f863ca5b7e0c41efc4c6647628e3532c1e1b6700de2febfad19964b3a994c77a0ff5e83d9233b
+DIST trickyfetch-8.0.tar.gz 10618 SHA256 41d53841b0259123fcfb3b9ad3855cd3ade1959ae341365c4da634c273d00f16 SHA512 5aace1ad25deba94514a911bd1e7b6b46cad39e048d672f6e6bc67e9dd416895f7dd27fe4ea68bd754cc43d634364bf8add7396eb85ec5b589a147230d77dcce WHIRLPOOL f20e0c9bb5c168ba7e412075e2c72a56d99c3db66ad8bf496865d17c8d0b8743ff7dd0b89e7aaccd46ab735a81b32a3d9ab3867aa8bf88364c808c0df52460bc
