@@ -13,7 +13,4 @@
 		<bugs-to>mailto:martin@mvath.de</bugs-to>
 		<remote-id type="github">vaeth/trickyfetch</remote-id>
 	</upstream>
-	<use>
-		<flag name="getdelta">Support getdelta</flag>
-	</use>
 </pkgmetadata>
