@@ -1,6 +1,12 @@
 # ChangeLog for app-portage/trickyfetch
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*trickyfetch-8.0 (21 Jan 2013)
+
+  21 Jan 2013; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+  Support /etc/trickyfetch.conf instead of IUSE=getdelta
 
 *trickyfetch-7.3 (25 Nov 2012)
 
